# nlp-with-transformers

./: 01_introduction.ipynb  02_classification.ipynb  04_multilingual-ner.ipynb  08_model-compression.ipynb  09_few-to-no-labels.ipynb  10_transformers-from-scratch.ipynb  Dockerfile  commands.md  pyproject.toml  requirements.txt  toubleshooting.md
