[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.12.0",
    "faiss-gpu>=1.7.2",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.9.4",
    "nlpaug==1.1.7",
    "nltk==3.9b1",
    "optuna>=4.5.0",
    "psutil>=7.0.0",
    "py7zr>=1.0.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.6.1",
    "scikit-multilearn==0.2.0",
]
